# steve-i

./: .dockerignore  .gitignore  AUTHORS  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run.sh
.github/workflows/: rust.yml
migrations/2022-02-09-073122_create_users/: down.sql  up.sql
migrations/2022-02-09-074701_create_guilds/: down.sql  up.sql
migrations/2022-02-09-074705_create_guild_users/: down.sql  up.sql
migrations/2022-05-09-104733_guilds/: down.sql  up.sql
migrations/2022-05-09-104752_guild_users/: down.sql  up.sql
migrations/2022-05-09-104800_users/: down.sql  up.sql
src/: main.rs
src/commands/: misc.rs  mod.rs  music.rs
src/db/: init.rs  mod.rs  models.rs  schema.rs
src/log/: color.rs  error.rs  log.rs  mod.rs
src/spotify/: result.rs
