[package]
name = "steve"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
chrono = "0.4.19"
dotenv = "0.15.0"
tokio = { version = "1.11.0", features = ["macros","rt-multi-thread"] }
youtube_dl = "0.6.3"
diesel = {version = "1.4.4", features = ["mysql"]}
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.12.0"
rspotify = { version = "0.11.5", features = ["env-file","client-reqwest"] }
rspotify-model = { version = "0.11.5" }
[dependencies.songbird]
default-features = true
features = [
   "builtin-queue",
   ]
version = "0.2.0"
[dependencies.serenity]
default-features = false
features = [
   "client",
   "gateway", 
   "model", 
   "rustls_backend", 
   "framework", 
   "builder", 
   "standard_framework",
   "utils",
   "voice",
   "cache"
   ]
version = "0.10"