[package]
name = "steve"
version = "0.1.7"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
chrono = "0.4.22"
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["macros","rt-multi-thread"] }
youtube_dl = "0.7.0"
diesel = {version = "2.0.0", features = ["mysql"]}
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13.0"
rspotify = { version = "0.11.5", features = ["env-file","client-reqwest"] }
rspotify-model = { version = "0.11.5" }
rspotify-http = { version = "0.11.5" }
async-recursion = "1.0.0"

[dependencies.rustversion]
version = "1.0.7"
optional = true

[dependencies.songbird]
default-features = true
features = [
   "builtin-queue",
   ]
version = "0.3"

[dependencies.serenity]
default-features = false
features = [
   "client",
   "gateway", 
   "model", 
   "rustls_backend", 
   "framework", 
   "builder", 
   "standard_framework",
   "utils",
   "voice",
   "cache",
   "collector"
   ]
version = "0.11.5"